feat: add kbd support to lightbox, fix some stuff in comments
See `CHANGELOG.md` for full list of changes
